--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -60,7 +60,7 @@
                                             'type': 'select',
                                             'name': 'parent',
                                             'args': {
-                                                'option': {NIL: '---'}|merge(categories.whereNotIn('uuid', [item.uuid]).pluck('title', 'uuid').all()),
+                                                'option': {(NIL): '---'}|merge(categories.whereNotIn('uuid', [item.uuid]).pluck('title', 'uuid').all()),
                                                 'selected': item.parent ?? parent
                                             }
                                         } %}
