fix url handler cart

--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -449,7 +449,7 @@
                         }
 
                         $.ajax({
-                            url: this.options.cart.handler || location.pathname,
+                            url: this.options.cart.url || location.pathname,
                             type: 'POST',
                             data: data,
                             contentType: false,
