--- a/theme/default/catalog.category.twig
+++ b/theme/default/catalog.category.twig
@@ -42,7 +42,7 @@
                     <div class="filter-widget">
                         <h2 class="fw-title">Категории</h2>
                         <ul class="category-menu">
-                            {% include 'catalog.category.menu.twig' with {'categories':categories} only %}
+                            {% include 'catalog.category.menu.twig' with {'categories':categories,'NIL':NIL} only %}
                         </ul>
                     </div>
 
