--- a/theme/default/publication.full.twig
+++ b/theme/default/publication.full.twig
@@ -30,10 +30,7 @@
                     <div class="filter-widget">
                         <h2 class="fw-title">Категории</h2>
                         <ul class="category-menu">
-                            {% include 'publication.menu.twig' with {'categories':categories} only %}
-                            {#{% for cat in categories %}
-                                <li class=""><a href="/{{ cat.address }}">{{ cat.title }}</a></li>
-                            {% endfor %}#}
+                            {% include 'publication.menu.twig' with {'categories':categories,'NIL':NIL} only %}
                         </ul>
                     </div>
                 </div>
