--- a/theme/default/catalog.category.product.twig
+++ b/theme/default/catalog.category.product.twig
@@ -1,5 +1,5 @@
 <div class="col-lg-4 col-sm-6">
-    <div class="product-item" data-catalog-product>
+    <div class="product-item" data-catalog-item>
         <div class="pi-pic">
             {#<div class="tag-sale">ON SALE</div>#}
             <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}">
@@ -12,7 +12,7 @@
             </a>
             <div class="pi-links">
                 {# add class item_add to btn #}
-                <a href="javascript:;" class="add-card" data-catalog-product-add><i class="flaticon-bag"></i><span>В корзину</span></a>
+                <a href="javascript:;" class="add-card" data-catalog-item-add><i class="flaticon-bag"></i><span>В корзину</span></a>
             </div>
         </div>
         <div class="pi-text">
