--- a/theme/default/products/last-list.twig
+++ b/theme/default/products/last-list.twig
@@ -10,7 +10,7 @@
 
         <div class="product-slider owl-carousel">
             {% for product in products %}
-                <div class="product-item" data-catalog-product>
+                <div class="product-item" data-catalog-item>
                     <div class="pi-pic">
                         <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ product.address }}" style="text-align: center;">
                             {% include 'mixin/img.twig' with {
@@ -21,7 +21,7 @@
                             } only %}
                         </a>
                         <div class="pi-links">
-                            <a href="javascript:;" class="add-card" data-catalog-product-add><i class="flaticon-bag"></i><span>В корзину</span></a>
+                            <a href="javascript:;" class="add-card" data-catalog-item-add><i class="flaticon-bag"></i><span>В корзину</span></a>
                         </div>
                     </div>
                     <div class="pi-text">
