change default value

--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -15,7 +15,7 @@
                                 handlers: true,
                             },
                             cart: {
-                                group_header: true, // отображение заголовков групп
+                                group_header: false, // отображение заголовков групп
                                 columns: [
                                     {label: '', attr: 'thumb', view: null, class: null, style: 'width: 10%; text-align: center;'},
                                     {label: 'Наименование', attr: 'title', view: null, class: null, style: null},
