--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -298,14 +298,17 @@
                             <nav class="pull-left">
                                 <ul class="nav">
                                     <li class="nav-item">
-                                        <a class="nav-link" target="_blank" href="https://github.com/0x12f">
+                                        <a class="nav-link" href="https://github.com/0x12f/platform" target="_blank">
                                             GitHub
                                         </a>
                                     </li>
                                 </ul>
                             </nav>
                             <div class="copyright ml-auto">
-                                Сделано с <i class="fa fa-heart heart text-danger"></i> в <a href="https://github.com/0x12f">0x12f</a>, {{ 'now'|df('Y') }}
+                                Copyright &copy; {{ 'now'|df('Y') }} All rights reserved |
+                                Powered by
+                                <a href="https://github.com/0x12f" target="_blank">0x12f</a>
+                                aka <a href="https://alksily.0x12f.com" target="_blank">Aleksey Ilyin</a>
                             </div>
                         </div>
                     </footer>
