--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -88,7 +88,7 @@
                                         <td>{{ item.field1 }}</td>
                                         <td>{{ item.field2 }}</td>
                                         <td>{{ item.field3 }}</td>
-                                        {#<td class="text-center">{{ item.getVolume() }}</td>
+                                        {#<td class="text-center">{{ item.getVolumeWithUnit() }}</td>
                                         <td class="text-center">{{ item.stock|format_number({fraction_digit: 2}) }}</td>#}
                                         <td class="text-center">
                                             <div class="btn-group dropdown">
