--- a/src/Template/cup/catalog/barcode-modal.twig
+++ b/src/Template/cup/catalog/barcode-modal.twig
@@ -1,7 +1,7 @@
 <div id="btn-modal-scan" class="modal">
     <div class="row">
         <div class="col-12 text-center">
-            {% set url = base_url() ~ '/cup/catalog/product/scan/' ~ pushstream_channel(user.uuid) %}
+            {% set url = base_url() ~ '/cup/catalog/product/scan/' %}
             {{ qr_code(url, 250, 250) }}
             <p>
                 Отсканируйте этот QR вашим устройством,<br>
